Bug 120651: Memory leaks in PK11_GetCertList.

1) Fix leaks in error paths (bfind.c -- found by inspection).
2) Don't allocate hash table data out of the arena. PL_Hash grows and shrinks
the hash buckets as necessary. In arenas they will just grow.
3) Don't allocate temparary locks out of the global instance arena pool.